Fix desc spacing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -255,3 +255,6 @@ code {
 div {
   white-space: pre-wrap;
 }
+.bgrow {
+  margin-bottom: 4px;
+}
